--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "url": "https://github.com/dottgonzo/machio/issues"
   },
   "dependencies": {
+    "cors": "^2.7.1",
     "exec-sync": "^0.1.6",
     "express": "^4.13.3",
     "express-pouchdb": "^1.0.1",
@@ -26,6 +27,7 @@
     "pouchdb": "^5.1.0",
     "promise": "^7.0.4",
     "request-promise-json": "^1.0.4",
+    "socket.io": "^1.3.7",
     "socket.io-client": "^1.3.7",
     "system-id": "0.0.26",
     "timerdaemon": "0.0.2"
