--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "url": "https://github.com/dottgonzo/machio/issues"
   },
   "dependencies": {
+    "bluebird": "^3.1.1",
     "body-parser": "^1.14.2",
     "cors": "^2.7.1",
+    "couchjsonconf": "0.0.16",
     "exec-sync": "^0.1.6",
     "express": "^4.13.3",
     "express-pouchdb": "^1.0.1",
@@ -25,11 +27,25 @@
     "mkdir-p": "0.0.7",
     "path-exists": "^2.1.0",
     "pouchdb": "^5.1.0",
-    "promise": "^7.0.4",
+    "promise-test-connection": "0.0.27",
     "request-promise-json": "^1.0.4",
     "socket.io": "^1.3.7",
     "socket.io-client": "^1.3.7",
     "system-id": "0.0.26",
-    "timerdaemon": "0.0.2"
+    "timerdaemon": "0.0.4"
+  },
+  "devDependencies": {
+    "chai": "^3.4.1",
+    "gulp": "^3.9.0",
+    "gulp-bump": "^1.0.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-filter": "^3.0.1",
+    "gulp-mocha": "^2.2.0",
+    "gulp-prompt": "^0.1.2",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-tag-version": "^1.3.0",
+    "gulp-typescript": "^2.10.0",
+    "gulp-util": "^3.0.7",
+    "mocha": "^2.3.4"
   }
 }
